--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ dependencies {
   compile 'commons-fileupload:commons-fileupload:1.3.1'
   compile 'net.coobird:thumbnailator:0.4.8'
   compile 'org.reflections:reflections:0.9.10'
+  compile 'log4j:log4j:1.2.17'
   
   providedCompile 'javax.servlet:javax.servlet-api:3.1.0'
 }
